Added wanderly to the name

--- a/travel_activity/trips/templates/base.html
+++ b/travel_activity/trips/templates/base.html
@@ -3,14 +3,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Travel Activity Finder</title>
+  <title>Wanderly</title>
   <link rel="stylesheet" href="{% static 'styles.css' %}">
 </head>
 <body>
   <nav class="navbar">
     <div class="navbar-container">
       <div class="logo">
-        <a href="/">🌍 Travel Activity</a>
+        <a href="/">🌍 Wanderly</a>
       </div>
       <ul class="nav-links">
         <li><a href="{% url 'home' %}">Home</a></li>
